// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createComponentRenderFunction Tests With multiple props 1`] = `
"function whenComponentIsRendered() {
    return render(
        <test
            att_1={propAtt_1}
            att_2={propAtt_2}
        />
    )
}
"
`;

exports[`createComponentRenderFunction Tests With one prop 1`] = `
"function whenComponentIsRendered() {
    return render(
        <test
            att_1={propAtt_1}
        />
    )
}
"
`;

exports[`createComponentRenderFunction Tests Without props 1`] = `
"function whenComponentIsRendered() {
    return render(
        <test />
    )
}
"
`;
